# ripples

./: .gitignore  README.md  index.html  package.json  prepare-env.sh  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/default-workspace/: test.json  test2.json  test3.json  youtube.json
src-tauri/default-workspace/old_requests/: test2.json
src-tauri/json_workspace/: Cargo.toml
src-tauri/json_workspace/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
src/components/: index.vue
src/components/EnvironmentMenu/: index.vue
src/components/RequestEditor/: AuthEditor.vue  BodyEditor.vue  HeaderEditor.vue  ParamEditor.vue  UrlEditor.vue  index.vue
src/components/RequestFiles/: FileTree.vue  index.vue
src/components/ResponseView/: body.vue  header.vue  index.vue  url.vue
src/components/config_bar/: index.vue
src/components/environment_menu/: index.vue
src/components/environment_selector/: index.vue
src/components/environment_variables_editor/: index.vue
src/components/request_editor/: auth_editor.vue  body_editor.vue  header_editor.vue  index.vue  param_editor.vue  url_editor.vue
src/components/request_files/: file_tree.vue  index.vue
src/components/response_view/: body.vue  header.vue  index.vue  preview.vue  request.vue  url.vue
src/scripts/: elementResizer.ts  files.ts  requestEditor.ts  requests.ts
