workspace = { }
[package]
name = "simple-requests"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "simple_requests_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target.aarch64-linux-android]
linker = "/home/rodolpho/Android/Sdk/ndk/27.0.11902837/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android33-clang"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.23", features = [] }
json_workspace = { path="json_workspace" }
once_cell = { version = "1.19.0" }
reqwest = { version = "0.12.5" }
openssl = { version = "0.10", features = ["vendored"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
